--- a/Installer/Info.plist
+++ b/Installer/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>3.12</string>
+	<string>3.13beta</string>
 	<key>SBUsesNetwork</key>
 	<integer>3</integer>
 	<key>NSPrincipalClass</key>
